zero-cost-templating/tests/ui/compile_fail/missing_variable_value.stderr
error: unexpected end of macro invocation
  --> tests/ui/compile_fail/missing_variable_value.rs:15:46
   |
10 | #[template_stream("test.html.hbs")]
   | ----------------------------------- when calling this macro
...
15 |     let template = test_page_title1!(template);
   |                                              ^ missing tokens in macro arguments
   |
note: while trying to match `,`
  --> tests/ui/compile_fail/missing_variable_value.rs:10:1
   |
10 | #[template_stream("test.html.hbs")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `template_stream` (in Nightly builds, run with -Z macro-backtrace for more info)
